--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <nav>
             <ul>
                 <li><a href="#product"><i class="fas fa-shopping-bag"></i> Producto</a></li>
-                <li><a href="#contact"><i class="fas fa-envelope"></i> Contacto</a></li>
+                
+                <li><a href="tel:+502 37461109"><i class="fab fa-whatsapp"></i> Contáctanos</a></li>
                 <li><a href="New"><i class="fas fa-plus"></i> Nuevo ingreso</a></li>
             </ul>
         </nav>        
@@ -29,6 +30,9 @@
     <img src="Producto/adidas/adi 2000.png" alt="Producto 1">
     <h3>ADIDAS ADI2000 x YU GI HO</h3>
     <p>precio Q599</p> 
+    <a href="https://www.instagram.com/traficandotenis/" target="_blank">
+        <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
+    </a>
     <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
     <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
 
@@ -38,6 +42,9 @@
         <img src="Producto/adidas/toa.png" alt="Producto 1">
         <h3>Adidas Campus toallin</h3>
         <p>Precio: Q599</p> 
+        <a href="https://www.instagram.com/traficandotenis/" target="_blank">
+            <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
+        </a>
         <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
         <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
 
@@ -47,6 +54,9 @@
     <img src="Producto/nike/blazer.png" alt="Tenis">
     <h3>Nike blazer mid 77</h3>
     <p>Precio: Q.499</p> 
+    <a href="https://www.instagram.com/traficandotenis/" target="_blank">
+        <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
+    </a>
     <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
      <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
 </section>
@@ -55,6 +65,9 @@
         <img src="Producto/jordan 1/Captura de pantalla 2023-09-07 193834.png" alt="Producto 1">
         <h3>Jordan 1 Patent Bred</h3>
         <p>Precio: Q.300</p> 
+        <a href="https://www.instagram.com/traficandotenis/" target="_blank">
+            <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
+        </a>
         <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
         <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
     </div>
@@ -64,6 +77,9 @@
         <img src="Producto/Dunk/travis.png" alt="Producto 1">
         <h3>Nike dunk sb c Travis Scott </h3>
         <p>Precio: Q.495</p> 
+        <a href="https://www.instagram.com/traficandotenis/" target="_blank">
+            <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
+        </a>
         <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
         <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>  
     </div>
