--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <nav>
             <ul>
                 <li><a href="#product"><i class="fas fa-shopping-bag"></i> Producto</a></li>
-                
                 <li><a href="tel:+502 37461109"><i class="fab fa-whatsapp"></i> Contáctanos</a></li>
-                <li><a href="New"><i class="fas fa-plus"></i> Nuevo ingreso</a></li>
+                <li><a href="Producto/alfombra/ALFOMBRA.png"><i class="fas fa-plus"></i> Nuevo ingreso</a></li>
             </ul>
         </nav>        
     </div>
@@ -34,7 +33,14 @@
         <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
     </a>
     <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
-    <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
+   
+    <button onclick="showSizes('adi2000')">Seleccionar Talla</button>
+    <div id="sizes-adi2000" style="display: none;">
+        <p>Tallas disponibles:</p>
+        <ul>
+            <li>36</li>
+            <li>37</li>
+            <li>38</li>
 
 </section>
 <section class="product">
@@ -46,7 +52,13 @@
             <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
         </a>
         <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
-        <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
+        <button onclick="showSizes('toallin')">Seleccionar Talla</button>
+        <div id="sizes-toallin" style="display: none;">
+            <p>Tallas disponibles:</p>
+            <ul>
+                <li>36</li>
+                <li>37</li>
+                <li>38</li>
 
     </div>
 </section>
@@ -58,7 +70,13 @@
         <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
     </a>
     <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
-     <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
+    <button onclick="showSizes('blazer')">Seleccionar Talla</button>
+    <div id="sizes-blazer" style="display: none;">
+        <p>Tallas disponibles:</p>
+        <ul>
+            <li>36</li>
+            <li>37</li>
+            <li>38</li>
 </section>
 <section class="product">
     <div class="animation-container">
@@ -69,7 +87,13 @@
             <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
         </a>
         <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
-        <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>
+        <button onclick="showSizes('j1')">Seleccionar Talla</button>
+        <div id="sizes-j1" style="display: none;">
+            <p>Tallas disponibles:</p>
+            <ul>
+                <li>36</li>
+                <li>37</li>
+                <li>38</li>
     </div>
 </section>
 <section class="product">
@@ -81,7 +105,13 @@
             <button><i class="fas fa-shopping-cart"></i> Comprar en Instagram</button>
         </a>
         <button><i class="fas fa-shopping-cart"></i> Añadir al carrito</button>
-        <button><i class="fas fa-ruler"></i> Seleccionar Talla</button>  
+         <button onclick="showSizes('dunk')">Seleccionar Talla</button>
+    <div id="sizes-dunk" style="display: none;">
+        <p>Tallas disponibles:</p>
+        <ul>
+            <li>36</li>
+            <li>37</li>
+            <li>38</li>
     </div>
 </section>
 <footer>
